--- a/src/styles/consumer.module.css
+++ b/src/styles/consumer.module.css
@@ -1,18 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');
 
+.container{
+    display: flex;
+    justify-content: center;
+}
+
 .box{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 1200px;
 }
 
-.box .title{
-    color: #111;
-    text-align: center;
-    margin-top: 20px;
-    font-family: 'Oxygen';
-    text-transform: uppercase;
-}
-
-.box_coin li{ 
-    background-color: #ccc;
-    border: 1px solid #111;
+.wrap {
+    border-radius: 10%;
+    padding:20px;
+    margin: 10px;
+    max-width: 250px;
+    min-width: 250px;
+    min-height: 250px;
+    background-color:gray;
+    color: var(--white);
 }
