--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -6,7 +6,7 @@
     padding: 20px;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 30px;
+    border-bottom: 2px solid var(--gold);
 }
 
 .logo a{
