:construction: fix(router): correct usage of React Router in App.jsx
The React Router implementation was mistakenly placed in the Header.jsx file, causing the navigation to malfunction. The issue was resolved by moving the router setup to App.jsx. Now, the Register button successfully navigates to the registration page.

docs(register): development of the registration page to start on 10/01/2025

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -9,24 +9,24 @@
     border-bottom: 2px solid var(--gold);
 }
 
-.logo a{
+.cryptolog{
     font-family: 'Oxygen';
     text-transform: uppercase;
     text-decoration: none;
     color: aliceblue;
 }
 
-.logo a:hover{
+.cryptolog:hover{
     color: var(--gold);
     
 }
 
-.nav ul{
+.nav{
     display: flex;
     margin-top: 8px;
 }
 
-.nav ul li{
+.link{
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -34,7 +34,7 @@
     
 }
 
-.nav a{
+.link{
     color: var(--white);
     text-decoration: none;
     font-size: 18px;
@@ -45,7 +45,7 @@
     
 }
 
-.nav a:hover{
+.link:hover{
     color: var(--gold);
     text-decoration: underline;
 }
